[gd_scene load_steps=6 format=3 uid="uid://c3b5ki3ke7o61"]

[ext_resource type="Script" path="res://player.gd" id="1_hou0v"]
[ext_resource type="Script" path="res://q_recognizer/gesture_node.gd" id="2_wyy8a"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_lygw4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2y0pq"]
albedo_color = Color(0.428717, 0.710084, 0.377988, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_uru74"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(0.299173, 0, 0, 0, 0.299173, 0, 0, 0, 0.299173, 0, 0.721227, 0)
script = ExtResource("1_hou0v")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_lygw4")
surface_material_override/0 = SubResource("StandardMaterial3D_2y0pq")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_uru74")

[node name="Head2" type="Node3D" parent="."]
transform = Transform3D(0.911592, 0, 0, 0, 0.911592, 0, 0, 0, 0.911592, 0, 2.34799, 0)

[node name="Camera3D" type="Camera3D" parent="Head2"]

[node name="RayCast3D" type="RayCast3D" parent="Head2/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.200279)
target_position = Vector3(0, 0, -0.5)
collide_with_areas = true
debug_shape_custom_color = Color(0, 0, 0.717647, 1)

[node name="Marker3D" type="Marker3D" parent="Head2/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.721898)

[node name="GestureNode" type="Node2D" parent="."]
script = ExtResource("2_wyy8a")

[connection signal="draw_sent" from="GestureNode" to="." method="_on_gesture_node_draw_sent"]
